# pbl_quantum

./: .gitignore  COMPLETE-GUIDE.md  IMPLEMENTATION_SUMMARY.md  Student Course (Jul-Nov 2025 and Winter 2025).csv  Student Course (Jul-Nov 2025 and Winter 2025).xlsx  UV_GUIDE.md  pyproject.toml  qubo_solver_dwave.py  reqirements.txt  requirements.txt  test.md  test_setup.py
Old Qubo/: README_SOLVER.md  data-loader.py  dataset-generator.py  qubo-builder-example.py
QAOA/: 01_generate_dataset.py  02_visualize_graph.py  03_build_qubo.py  04_solve_qaoa.py  04_unified_solver.py  05_assign_rooms.py  benchmark_k_for_all_backends.py  benchmark_k_vales.py  compare_backend.py  postprocess_timetable.py  readme.md  run_exam_scheduler.md  run_exam_scheduler.py  run_exam_scheduler_greedy.py  run_exam_scheduler_slack.py  run_pipeline.sh  solve_with_backend.py  timetable_neal (1).csv  timetable_neal (1)_matrix_2slots_per_day.csv  timetable_neal_20slots.csv  timetable_neal_20slots_matrix_2slots_per_day.csv  usage_guide.md
QAOA/output/: benchmark_all_backends.csv  (+1 more)
exam_scheduling_data_large/: courses.csv  faculty.csv  faculty_preferences.csv  metadata.json  room_availability.csv  rooms.csv
exam_scheduling_data_medium/: conflict_matrix.csv  enrollments.csv  faculty.csv  faculty_preferences.csv  room_availability.csv  students.csv
exam_scheduling_data_small/: conflict_matrix.csv  courses.csv  faculty.csv  faculty_preferences.csv  rooms.csv  students.csv
exam_scheduling_data_tiny/: conflict_matrix.csv  faculty.csv  faculty_preferences.csv  room_availability.csv  students.csv
(+395 files in other folders)
